--- a/eWallet/app/src/main/res/layout/activity_on_boarding.xml
+++ b/eWallet/app/src/main/res/layout/activity_on_boarding.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.onboarding.OnBoardingActivity">
+    tools:context=".ui.onboarding.OnBoardingActivity">
 
     <include
         layout="@layout/action_bar"
