--- a/eWallet/app/src/main/res/layout/activity_splash.xml
+++ b/eWallet/app/src/main/res/layout/activity_splash.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical"
-    android:padding="@dimen/_8sdp">
+    android:padding="@dimen/_8sdp"
+    tools:context=".ui.splash.SplashActivity">
 
     <include
         layout="@layout/action_bar"
@@ -14,44 +15,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="9"
+        android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_logo_splash"
-            tools:layout_editor_absoluteX="73dp"
-            tools:layout_editor_absoluteY="334dp" />
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="@color/yellow_send"
+            android:textSize="72sp"
+            android:textStyle="bold" />
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_8sdp"
             android:text="@string/title_splash"
             android:textColor="#FFFFFF"
-            android:textSize="16sp" />
-
+            android:textSize="16sp"
+            android:textStyle="normal" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center|bottom"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
-            android:paddingBottom="@dimen/_16sdp"
-            android:text="@string/version_app"
-            android:textColor="#666E75"
-            android:textSize="14sp" />
-    </LinearLayout>
-
-</LinearLayout>
+        android:layout_gravity="center|bottom"
+        android:paddingBottom="@dimen/_16sdp"
+        android:text="@string/version_app"
+        android:textColor="#666E75"
+        android:textSize="14sp" />
+</FrameLayout>
