--- a/vnCalling/app/src/main/res/values/attrs.xml
+++ b/vnCalling/app/src/main/res/values/attrs.xml
@@ -7,6 +7,13 @@
     </declare-styleable>
 
     <declare-styleable name="TextFieldCustom">
-
+        <attr name="textHint" format="string" />
+        <attr name="hintRes" format="integer" />
+        <attr name="startIcon" format="reference" />
+        <attr name="text" format="string" />
+        <attr name="textRes" format="integer" />
+        <attr name="imeOption" format="string" />
+        <attr name="inputTypes" format="string" />
+        <attr name="drawableEnd" format="reference" />
     </declare-styleable>
 </resources>
