--- a/vnCalling/app/src/main/res/layout/custom_toolbar_view.xml
+++ b/vnCalling/app/src/main/res/layout/custom_toolbar_view.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background"
+    android:background="@android:color/transparent"
     android:paddingVertical="@dimen/_6sdp"
     tools:context=".ui.custom.ToolbarCustom">
 
