--- a/vnCalling/app/src/main/res/layout/fragment_sign_up.xml
+++ b/vnCalling/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,6 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.android.vncalling.ui.custom.ToolbarCustom
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/_8sdp"
+        app:leftToolbar="@drawable/ic_back"
+        app:toolbarName="Create new account" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="@dimen/_6sdp"
+        android:layout_marginTop="@dimen/_24sdp"
+        android:background="@drawable/background_bottom_login"
+        android:paddingVertical="@dimen/_8sdp">
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="@dimen/_8sdp">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="@dimen/_88sdp"
+                    android:layout_height="@dimen/_88sdp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@color/background" />
+
+                <com.android.vncalling.ui.custom.TextFieldCustom
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_6sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    app:drawableEnd="@drawable/ic_delete_text"
+                    app:imeOption="next"
+                    app:inputTypes="text"
+                    app:textHint="User name"
+                    tools:text="William Nguyen" />
+
+                <com.android.vncalling.ui.custom.TextFieldCustom
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_6sdp"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    app:drawableEnd="@drawable/ic_delete_text"
+                    app:imeOption="next"
+                    app:inputTypes="textEmailAddress"
+                    app:textHint="Account name"
+                    tools:text="williamnb.vn@gmail.com" />
+
+                <com.android.vncalling.ui.custom.TextFieldCustom
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_6sdp"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    app:drawableEnd="@drawable/ic_delete_text"
+                    app:imeOption="next"
+                    app:inputTypes="textPassword"
+                    app:startIcon="@drawable/ic_lock"
+                    app:text="123456"
+                    app:textHint="Password" />
+
+                <com.android.vncalling.ui.custom.TextFieldCustom
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_6sdp"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    app:drawableEnd="@drawable/ic_delete_text"
+                    app:imeOption="done"
+                    app:inputTypes="textPassword"
+                    app:startIcon="@drawable/ic_lock"
+                    app:text="123456"
+                    app:textHint="Confirm password" />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:backgroundTint="@color/background"
+                    android:paddingVertical="@dimen/_6sdp"
+                    android:text="@string/register_button"
+                    android:textSize="@dimen/_14ssp"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/have_account"
+                    android:textColor="@color/background"
+                    android:textSize="@dimen/_12ssp"
+                    android:textStyle="italic" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:gravity="center_horizontal"
+                    android:text="@string/login_now"
+                    android:textColor="@color/background"
+                    android:textSize="@dimen/_14ssp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </FrameLayout>
+</LinearLayout>
