--- a/vnCalling/app/src/main/res/layout/fragment_sign_in.xml
+++ b/vnCalling/app/src/main/res/layout/fragment_sign_in.xml
@@ -47,7 +47,7 @@
                 android:textSize="@dimen/_12ssp"
                 android:textStyle="italic" />
 
-            <com.android.vncalling.ui.custom.TextFieldCustom
+            <com.android.vncalling.ui.custom.view.TextFieldCustom
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_40sdp"
@@ -57,7 +57,7 @@
                 app:textHint="Tài khoản"
                 tools:text="williamnb.vn@gmail.com" />
 
-            <com.android.vncalling.ui.custom.TextFieldCustom
+            <com.android.vncalling.ui.custom.view.TextFieldCustom
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8sdp"
