--- a/vnCalling/app/src/main/res/layout/activity_welcome.xml
+++ b/vnCalling/app/src/main/res/layout/activity_welcome.xml
@@ -1,6 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background"
+    android:orientation="vertical"
+    tools:context=".ui.features.welcome.WelcomeActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="@dimen/_99sdp"
+        android:layout_height="@dimen/_80sdp"
+        android:layout_gravity="end"
+        android:layout_marginTop="-24dp"
+        android:layout_marginEnd="-28dp"
+        android:background="@drawable/background_top_end_welcome">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/btnSkip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_6sdp"
+            android:layout_marginEnd="@dimen/_4sdp"
+            android:gravity="center"
+            android:text="@string/skip"
+            android:textSize="@dimen/_14ssp"
+            android:textStyle="bold" />
+    </FrameLayout>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/indicator"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_28sdp"
+        android:layout_marginTop="@dimen/_6sdp"
+        android:gravity="center" />
+
+    <Button
+        android:id="@+id/btnNext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginBottom="@dimen/_40sdp"
+        android:backgroundTint="@color/white"
+        android:paddingVertical="@dimen/_6sdp"
+        android:text="@string/get_started"
+        android:textColor="@color/background"
+        android:textSize="@dimen/_16ssp"
+        android:textStyle="bold" />
+</LinearLayout>
