calling-06: update new features

--- a/vnCalling/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/vnCalling/app/src/main/res/layout/fragment_forgot_password.xml
@@ -1,13 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
+    android:orientation="vertical"
+    android:padding="@dimen/_8sdp"
     tools:context=".ui.features.login.forgot_password.ForgotPasswordFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/btnBack"
+        android:layout_width="@dimen/_24sdp"
+        android:layout_height="@dimen/_24sdp"
+        android:layout_marginStart="@dimen/_6sdp"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:src="@drawable/ic_back"
+        android:tint="@color/white" />
 
-</FrameLayout>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/_24sdp"
+        android:background="@drawable/background_circle_password_update"
+        android:padding="@dimen/_16sdp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="@dimen/_88sdp"
+            android:layout_height="@dimen/_88sdp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_lock"
+            android:tint="@color/background" />
+    </FrameLayout>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:gravity="center"
+        android:text="@string/forget_password"
+        android:textColor="@color/primarySecond"
+        android:textSize="@dimen/_28ssp"
+        android:textStyle="bold" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginHorizontal="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_6sdp"
+        android:gravity="center"
+        android:text="@string/description_forget_password"
+        android:textColor="@color/primarySecond"
+        android:textSize="@dimen/_13ssp"
+        android:textStyle="italic" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/inputLayout"
+        style="@style/OutlineInputLayoutStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_28sdp"
+        android:textColorHint="@color/primarySecond"
+        app:startIconDrawable="@drawable/ic_person"
+        app:startIconTint="@color/primarySecond"
+        tools:hint="Tài khoản">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textFieldAccountName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/primarySecond"
+            android:textSize="@dimen/_15ssp"
+            tools:text="@string/app_name" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/buttonNext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:backgroundTint="@color/primarySecond"
+        android:paddingVertical="@dimen/_8sdp"
+        android:text="@string/next"
+        android:textColor="@color/background"
+        android:textSize="@dimen/_15ssp"
+        android:textStyle="bold" />
+</LinearLayout>
