--- a/vnCalling/app/src/main/res/values/themes.xml
+++ b/vnCalling/app/src/main/res/values/themes.xml
@@ -13,4 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/background</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="OutlineInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">@color/primarySecond</item>
+        <item name="boxStrokeWidth">1dp</item>
+    </style>
 </resources>
